--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DATABASE_URL=postgresql://postgres:0210@localhost:5432/dbtest?schema=public
 PORT=3001
-JWT_SECRET="somesecrettoken"
+JWT_SECRET=somesecrettoken
